# fastharness

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml  test_debug_pool.py  test_live.py  test_multiturn.py
.github/workflows/: publish.yml  test.yml
docs/: openclaw-backend-research.md
examples/: __init__.py  advanced_features.py  fastapi_integration.py  simple_agent.py
src/fastharness/: __init__.py  a2a_client.py  app.py  client.py  step_logger.py  telemetry.py  tracing.py
src/fastharness/bridges/: __init__.py  openclaw.py
src/fastharness/core/: agent.py  event.py
src/fastharness/runtime/: __init__.py  base.py  claude.py  deepagents.py  openclaw.py  openhands.py
src/fastharness/stores/: __init__.py  redis.py
src/fastharness/worker/: __init__.py  claude_executor.py  claude_worker.py  client_pool.py  converter.py
tests/: __init__.py  test_basic.py  test_client.py  test_client_pool.py  test_converter.py  test_debug_pool.py  test_integration.py  test_integration_runtimes.py  test_live.py  test_multiturn.py  test_runtime.py  test_runtime_deepagents.py  test_runtime_openclaw.py  test_runtime_openhands.py  test_step_logger.py  test_stores_redis.py  test_telemetry.py  test_tracing.py  test_worker.py
