[project]
name = "fastharness"
version = "1.0.0"
description = "Wrap Claude Agent SDK and expose agents as A2A-compliant FastAPI services"
readme = "README.md"
authors = [
    { name = "Prass, The Nomadic Coder", email = "atemysemicolon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "a2a-sdk>=0.3.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ty",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: requires live external services (deselected by default)"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"
